Fixed the pagination issue, added the static views, fixed small bugs

--- a/locker_backend/Dockerfile
+++ b/locker_backend/Dockerfile
@@ -1,16 +1,17 @@
 # Use an official Python runtime as a parent image
 FROM python:3.10-slim
 
-# Set environment variables
-ENV PYTHONUNBUFFERED 1
-
-# Install system dependencies for mysqlclient
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     pkg-config \
     libmariadb-dev-compat \
     libmariadb-dev \
     build-essential \
+    nginx \
     && rm -rf /var/lib/apt/lists/*
+
+# Set environment variables
+ENV PYTHONUNBUFFERED 1
 
 # Set the working directory
 WORKDIR /app
@@ -18,14 +19,20 @@ WORKDIR /app
 # Copy the requirements.txt into the container
 COPY requirements.txt .
 
-# Install the Python dependencies
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application into the container
+# Copy application code
 COPY . .
 
-# Specify the port
-EXPOSE 8000
+# Collect static files
+RUN python manage.py collectstatic --noinput
 
-# Run Gunicorn with 4 worker processes
-CMD ["gunicorn", "locker_backend.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "4"]
+# Copy Nginx configuration
+COPY nginx.conf /etc/nginx/sites-available/default
+
+# Expose port 80 for Nginx
+EXPOSE 80
+
+# Run both Nginx and Gunicorn
+CMD service nginx start && gunicorn locker_backend.wsgi:application --bind 0.0.0.0:8000 --workers 4
