--- a/locker_backend/Dockerfile
+++ b/locker_backend/Dockerfile
@@ -23,7 +23,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY . .
+COPY static .
 
 # Collect static files
 RUN python manage.py collectstatic --noinput
