Added the deploy bash script for executing the deployment with one command

--- a/locker_backend/Dockerfile
+++ b/locker_backend/Dockerfile
@@ -8,7 +8,13 @@ RUN apt-get update && apt-get install -y \
     libmariadb-dev \
     build-essential \
     nginx \
+    git \
+    curl \
     && rm -rf /var/lib/apt/lists/*
+
+# Install Node.js and npm for frontend build
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
+    apt-get install -y nodejs && npm install -g npm@latest
 
 # Set environment variables
 ENV PYTHONUNBUFFERED 1
@@ -16,13 +22,24 @@ ENV PYTHONUNBUFFERED 1
 # Set the working directory
 WORKDIR /app
 
-# Copy the requirements.txt into the container
+# Delete existing frontend files (if any) and clone the frontend repository
+RUN rm -rf /Password-manager-app-frontend && \
+    git clone --single-branch --branch main https://github.com/diana7376/Password-manager-app-frontend ../Password-manager-app-frontend
+
+# Navigate to the frontend directory, set up the environment, and build
+WORKDIR /Password-manager-app-frontend
+RUN echo "REACT_APP_API_BASE_URL=https://petite-danella-lockr-b5f8b6cb.koyeb.app/api" > .env && \
+    npm install && \
+    npm run build
+
+# Copy the built frontend to the static directory
+WORKDIR /app
+RUN rm -rf static/ && mkdir static && \
+    cp -r /Password-manager-app-frontend/build/* static/
+
+# Copy backend requirements and code
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
 COPY . .
 
 # Collect static files
